# card_recognizer_ffi

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
android/src/main/cpp/caffe/: CMakeLists.txt
android/src/main/cpp/crossplatform/: CMakeLists.txt
android/src/main/cpp/eigen/: CMakeLists.txt
android/src/main/cpp/libyuv/: CMakeLists.txt
android/src/main/cpp/opencv2/sdk/native/jni/: android.toolchain.cmake
android/src/main/cpp/protobuf/: CMakeLists.txt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/card_recognizer_ffi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: card_recognizer_ffi.podspec
ios/Classes/: card_recognizer_c.cpp  card_recognizer_ffi.c
ios/include/Eigen/src/Core/: Transpositions.h
ios/make/coffe/: CMakeLists.txt
lib/: card_recognizer_ffi.dart  card_recognizer_ffi_bindings_generated.dart
src/: CMakeLists.txt  card_recognizer_c.cpp  card_recognizer_ffi.c  card_recognizer_ffi.h
src/CrossPlatform/CaffePredictor/: CaffeNeuralNetwork.cpp  CaffeNeuralNetwork.h  CaffeObjectFactory.cpp  CaffeObjectFactory.h
src/CrossPlatform/Include/NeuralNetwork/: INeuralNetworkObjectFactory.h
src/CrossPlatform/Include/Public/: IRecognitionCore.h
src/CrossPlatform/Include/Recognizer/: IDateRecognizer.h  INameRecognizer.h  INumberRecognizer.h
src/CrossPlatform/Recognizer/: DateRecognizer.cpp  DateRecognizer.h  NameRecognizer.cpp  NameRecognizer.h  NumberRecognizer.cpp  NumberRecognizer.h  RecognitionCore.cpp  RecognitionCore.h
src/CrossPlatform/model/: convert_to_header.sh
src/CrossPlatform/model/include/DateLocalization/: cascade_date_xml.h  date_localization_l0_prototxt.h  date_localization_l1_prototxt.h
src/CrossPlatform/model/include/DateRecognition/: date_recognition_caffemodel.h  date_recognition_prototxt.h
src/CrossPlatform/model/include/NameLocalization/: cascade_name_xml.h  name_localization_x_caffemodel.h  name_localization_x_prototxt.h
src/CrossPlatform/model/include/NameRecognition/: name_space_char_recognition_prototxt.h  names_txt.h
src/CrossPlatform/model/include/NumberLocalization/: loc_x_prototxt.h  loc_y_caffemodel.h  loc_y_prototxt.h
src/CrossPlatform/model/include/NumberRecognition/: number_recognition_prototxt.h
